Bug 2840 - HEAD broken: PLL fixes broke radeon DRI driver
Summary: HEAD broken: PLL fixes broke radeon DRI driver
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: highest blocker
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-28 12:20 UTC by Adam Jackson
Modified: 2005-03-28 01:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix build problems with PLL changes (5.62 KB, patch)
2005-03-28 18:01 UTC, Kevin E. Martin
no flags Details | Splinter Review

Description Adam Jackson 2005-03-28 12:20:09 UTC
gcc -m32 -c -O2 -g -march=pentium3 -pipe -g -ansi -pedantic -Wall
-Wpointer-arith -Wstrict-prototypes                     -Wmissing-prototypes
-Wmissing-declarations                     -Wredundant-decls -Wnested-externs
-Wundef  -I../../../../../../exports/include/X11
-I../../../../../../include/extensions -I../../../../../../extras/Mesa/src/mesa
          -I../../../../../../extras/Mesa/src/mesa/main          
-I../../../../../../extras/Mesa/src/mesa/glapi         
-I../../../../../../extras/Mesa/src/mesa/shader                
-I../../../../../../extras/Mesa/include                
-I../../../../../../extras/Mesa/src/mesa/drivers/dri/common            
-I../../../../../../extras/Mesa/src/mesa/drivers/dri/radeon
-I../../../../../../lib/GL/dri             
-I../../../../../../exports/include/X11                
-I../../../../../../lib/GL/glx          -I../../../../../../lib/GL/include     
        -I../../../../../../programs/Xserver/GL/dri   
-I../../../../../../programs/Xserver/hw/xfree86/os-support              
-I../../../../../../programs/Xserver/hw/xfree86/common         
-I../../../../../../extras/drm/shared          
-I../../../../../../programs/Xserver/hw/xfree86/drivers/ati            
-I../../../../../../lib/GL/dri/drm  -I../../../../../..
-I../../../../../../exports/include   -Dlinux -D__i386__
-D_POSIX_C_SOURCE=199309L     -D_POSIX_SOURCE -D_XOPEN_SOURCE                  
       -D_BSD_SOURCE -D_SVID_SOURCE                             -D_GNU_SOURCE  
                         -DFUNCPROTO=15 -DNARROWPROTO -DXTHREADS  -D_REENTRANT
-DXUSE_MTSAFE_API    -DMALLOC_0_RETURNS_NULL -DGLXEXT -DXF86DRI
-DGLX_DIRECT_RENDERING -DGLX_USE_DLOPEN -DGLX_USE_MESA 
-DX_BYTE_ORDER=X_LITTLE_ENDIAN -DUSE_NEW_INTERFACE -DUSE_X86_ASM -DUSE_MMX_ASM
-DUSE_3DNOW_ASM -DUSE_SSE_ASM   radeon_ioctl.c
In file included from radeon_context.h:43,
                 from radeon_ioctl.c:46:
../../../../../../extras/Mesa/src/mesa/drivers/dri/common/dri_util.h:564:
warning: redundant redeclaration of 'glXGetProcAddress'
../../../../../../extras/Mesa/include/GL/glx.h:295: warning: previous
declaration of 'glXGetProcAddress' was here
In file included from radeon_ioctl.c:53:
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:136:
error: parse error before "info"
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:137:
warning: function declaration isn't a prototype
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h: In
function `RADEONPllErrataAfterIndex':
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:138:
error: `info' undeclared (first use in this function)
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:138:
error: (Each undeclared identifier is reported only once
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:138:
error: for each function it appears in.)
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:140:
error: `CHIP_ERRATA_PLL_DUMMYREADS' undeclared (first use in this function)
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h: At
top level:
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:150:
error: parse error before "info"
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:151:
warning: function declaration isn't a prototype
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h: In
function `RADEONPllErrataAfterData':
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:152:
error: `info' undeclared (first use in this function)
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:157:
error: `CHIP_ERRATA_PLL_DELAY' undeclared (first use in this function)
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:159:
warning: implicit declaration of function `usleep'
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:159:
warning: nested extern declaration of `usleep'
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:167:
error: `CHIP_ERRATA_R300_CG' undeclared (first use in this function)
radeon_ioctl.c: At top level:
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:137:
warning: 'RADEONPllErrataAfterIndex' defined but not used
../../../../../../programs/Xserver/hw/xfree86/drivers/ati/radeon_macros.h:151:
warning: 'RADEONPllErrataAfterData' defined but not used
make[6]: *** [radeon_ioctl.o] Error 1
make[6]: Leaving directory `/xorg/tinderbox/xc/lib/GL/mesa/drivers/dri/radeon'
make[5]: *** [all] Error 2
make[5]: Leaving directory `/xorg/tinderbox/xc/lib/GL/mesa/drivers/dri'
make[4]: *** [all] Error 2
make[4]: Leaving directory `/xorg/tinderbox/xc/lib/GL'
make[3]: *** [all] Error 2
make[3]: Leaving directory `/xorg/tinderbox/xc/lib'
make[2]: *** [all] Error 2
make[2]: Leaving directory `/xorg/tinderbox/xc'
make[1]: *** [World] Error 2
make[1]: Leaving directory `/xorg/tinderbox/xc'
make: *** [World] Error 2
Comment 1 Kevin E. Martin 2005-03-28 17:54:54 UTC
I saw this as well.  I'm working on a fix.
Should have it ready shortly.
Comment 2 Kevin E. Martin 2005-03-28 18:01:14 UTC
Created attachment 2227 [details] [review]
Fix build problems with PLL changes

The problem was that some static functions were added to the radeon_macros.h
file.  I've moved them to radeon_driver.c, added the appropriate externs in
radeon.h and fixed a few warnings.  There's lots more clean up that could be
done, but this should get us past the build problems.

BTW, this patch is untested so far.  Once I verify that everything still works,
I'll check the patch in.
Comment 3 Kevin E. Martin 2005-03-28 19:38:19 UTC
Okay, I've tested the patch now, and it appears to work fine here.  I will go
ahead and check it in.
Comment 4 Kevin E. Martin 2005-03-28 19:52:16 UTC
Patch checked in.  Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.