bugzilla #2840 (https://bugs.freedesktop.org/show_bug.cgi?id=2840)     attachment #2227 (https://bugs.freedesktop.org/attachment.cgi?id=2227)     Fix build problems introduced by previous Radeon PLL errata     workarounds.